--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aci",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/samriddhi09/ACI",
+  "homepage": "https://github.com/samriddhi09/aci",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
