--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "aci",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/samriddhi09/aci",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -16,6 +15,7 @@
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
